[package]
name = "spl-account-compression"
version = "2.0.0"
description = "Solana Program Library Account Compression Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31"
bytemuck = "1.13"
solana-program = "2"
solana-security-txt = "1.1.1"
spl-concurrent-merkle-tree = { version = "2.0.0", path = "../../../libraries/concurrent-merkle-tree" }
spl-noop = { version = "2.0.0", path = "../noop", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true
