[package]
name = "spl-account-compression"
version = "0.3.3"
description = "Solana Program Library Account Compression Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=1.0.0-rc.5", features = ["idl-build"] }
borsh = "1"
bytemuck = "1.13"
solana-program = "^3"
solana-security-txt = "1.1.1"
spl-concurrent-merkle-tree = { version = "0.3.0", path = "../../../libraries/concurrent-merkle-tree" }
spl-noop = { version = "0.2.0", path = "../noop", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true
